basic route, config and controller

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,4 @@
-controllers:
-    resource:
-        path: ../src/Controller/
-        namespace: App\Controller
-    type: attribute
+ponto-de-coleta:
+  path: /pontos-de-coleta
+  controller: Coleta\Controller\ColetaController::index
+  methods: [GET]
