--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "Coleta\\": "src/Coleta/"
         }
     },
     "autoload-dev": {
