--- a/config/services.yaml
+++ b/config/services.yaml
@@ -19,6 +19,7 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
-
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    Coleta\:
+        resource: '../src/Coleta/'
+        exclude:
+            - '../src/Coleta/Entity/'
