--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,4 @@
 APP_ENV=dev
 APP_SECRET=2ca64f8d83b9e89f5f19d672841d6bb8
 DATABASE_URL=mysql://user:pass@server:3306/db
+MAILER_DSN=smtp://mailhog:1025
