--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,8 +11,11 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
+
+    App\Repository\:
+        resource: '../src/Repository'
+        tags: [ 'doctrine.repository_service' ]
+
     Coleta\:
         resource: '../src/Coleta/'
         exclude:
