Override EntityUserProvider to check if user is verified

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -32,3 +32,8 @@ services:
         resource: '../src/Admin/'
         exclude:
             - '../src/Admin/Entity/'
+
+    Admin\Provider\UserProvider:
+        arguments:
+            $classOrAlias: 'App\Entity\User'
+            $property: 'email'
