--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,21 +1,16 @@
 security:
-    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        # used to reload user from session & other features (e.g. switch_user)
-        user_provider:
-            entity:
-                class: App\Entity\User
-                property: email
+        custom_provider:
+            id: Admin\Provider\UserProvider
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: user_provider
+            provider: custom_provider
             form_login:
                 login_path: login
                 check_path: login
